IBAction added to ViewController.swift

--- a/Multiple Video Players/Base.lproj/Main.storyboard
+++ b/Multiple Video Players/Base.lproj/Main.storyboard
@@ -29,6 +29,9 @@
                                 <state key="normal" title="Play Local Video">
                                     <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="playLocalVideo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="khO-ON-qbE"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
