--- a/Multiple Video Players/Base.lproj/Main.storyboard
+++ b/Multiple Video Players/Base.lproj/Main.storyboard
@@ -48,6 +48,7 @@
                                 </state>
                                 <connections>
                                     <action selector="playLocalVideo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pDR-sZ-sdr"/>
+                                    <action selector="playStreamingVideo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tFC-iA-ZJi"/>
                                 </connections>
                             </button>
                         </subviews>
