WebKit Framework added, IBOutlet added too ViewController.swift

--- a/Multiple Video Players/Base.lproj/Main.storyboard
+++ b/Multiple Video Players/Base.lproj/Main.storyboard
@@ -87,6 +87,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="youTubeWebView" destination="Hum-ou-VwG" id="fjD-D5-G9E"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
